--- a/App/citrushack/android/app/src/main/AndroidManifest.xml
+++ b/App/citrushack/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.citrushack">
    <application
+        android:usesCleartextTraffic="true"
         android:label="citrushack"
         android:icon="@mipmap/ic_launcher">
         <activity
