--- a/App/citrushack/pubspec.yaml
+++ b/App/citrushack/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cloud_firestore: "^1.0.1"
   cloud_functions: "^1.0.1"
   provider: "^5.0.0"
+  cloud_functions_platform_interface:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
